# aq-redis-pub-sub

./: .gitignore  docker-compose.yaml
pub/: main.py
sub/: pyproject.toml
sub/src/: .env.sample  main.py  requirements.txt  sub.py
